# rust-basic1

./: .gitignore  Cargo.toml  README.md  diesel.toml  mysql-acc.session.sql
migrations/: user.rs
migrations/20231027120000_create_users/: up.sql
migrations/2025-02-20-173148_users/: up.sql
scripts/: insert_user.rs
src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  schema.rs
src/handlers/: user.rs
src/models/: user.rs
src/services/: user.rs
