[package]
name = "my_user_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["mysql", "chrono", "r2d2"] }
chrono = "0.4"
dotenv = "0.15"  # For loading environment variables from .env
envy = "0.4" # For loading env variables into structs
thiserror = "2.0.10" # For custom errors

[dev-dependencies]
# ... (for testing)
