[package]
name = "my_user_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "1.4", features = ["mysql", "r2d2"] }
chrono = "0.4"
dotenv = "0.15"
envy = "0.4"
thiserror = "2.0.10"
r2d2 = "0.8"

[dev-dependencies]
# ... (for testing)
